src/objects/Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Test Object</relationshipLabel>
        <relationshipName>Test_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Formula_Field__c</fullName>
        <formula>CASE( GlobalPicklistUse__c , &quot;New&quot;, &quot;N&quot;, &quot;Open&quot;, &quot;O&quot;, &quot;C&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Formula Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_Home_Office__c</fullName>
        <label>Distance (Home &amp; Office)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_Fields__c</fullName>
        <formula>$Setup.Permission__c.Delete_Permission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalPicklistUse__c</fullName>
        <globalPicklist>GlobalStage</globalPicklist>
        <label>GlobalPicklistUse</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Home Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Make_Standard_Field_Unique__c</fullName>
        <description>Make Standard Field Unique</description>
        <label>Make Standard Field Unique</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>We cannot filter Pricebook.</description>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Test Object</relationshipLabel>
        <relationshipName>Test_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Field_Unique__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Field Unique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Number__c</fullName>
        <label>Test Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Picklist__c</fullName>
        <label>Test Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Text_Area__c</fullName>
        <label>Test Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Text__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Test Text</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Text_Area_Rich__c</fullName>
        <label>Text Area Rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <label>Unique Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Test Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Unique_Field__c</columns>
        <columns>Test_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>